ui_tests/all_missing_called_err.stderr
error: In this function, all references must be annotated with a lifetime.
 --> ui_tests/all_missing_called_err.rs:4:12
  |
4 | fn swap(a: &i32, b: &i32) -> (&i32, &i32) {
  |            ^

error: In this function, all references must be annotated with a lifetime.
 --> ui_tests/all_missing_called_err.rs:4:21
  |
4 | fn swap(a: &i32, b: &i32) -> (&i32, &i32) {
  |                     ^

error: In this function, all references must be annotated with a lifetime.
 --> ui_tests/all_missing_called_err.rs:4:31
  |
4 | fn swap(a: &i32, b: &i32) -> (&i32, &i32) {
  |                               ^

error: In this function, all references must be annotated with a lifetime.
 --> ui_tests/all_missing_called_err.rs:4:37
  |
4 | fn swap(a: &i32, b: &i32) -> (&i32, &i32) {
  |                                     ^

error[E0106]: missing lifetime specifiers
 --> ui_tests/all_missing_called_err.rs:4:31
  |
4 | fn swap(a: &i32, b: &i32) -> (&i32, &i32) {
  |            ----     ----      ^     ^ expected named lifetime parameter
  |                               |
  |                               expected named lifetime parameter
  |
  = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `a` or `b`
help: consider introducing a named lifetime parameter
  |
4 | fn swap<'a>(a: &'a i32, b: &'a i32) -> (&'a i32, &'a i32) {
  |        ++++     ++          ++           ++       ++
